# CI-CD

./: Jenkinsfile
Test/: CMake.txt  CMakeLists.txt  test_reg_map.cpp
programs/: fact.cpp  reverse.cpp  sample.cpp
